Signed-off-by: bernie <bernie@hyx.com>

--- a/src/main/webapp/App/css/global/helper.styl
+++ b/src/main/webapp/App/css/global/helper.styl
@@ -205,8 +205,14 @@ a.cttt:hover
 	overflow-y hidden
 	z-index -1
 	.picUl
+		li
+			overflow hidden
 		img
 			width 100%
+.widthPro
+	width 100% !important
+.heightPro
+	height 100%
 .imgPos
 	position absolute
 	top 210px
