--- a/src/main/webapp/App/css/view/index/main.styl
+++ b/src/main/webapp/App/css/view/index/main.styl
@@ -15,9 +15,9 @@
 	margin: 0 5px
 	position: relative
 	overflow: hidden
-	img
-		width 100%
-		height 180px
+.movieShow
+	text-align center
+	line-height 160px
 
 .productInfo
 	width 100%
