--- a/src/main/webapp/App/view/contactUs/tpl/tpl.html
+++ b/src/main/webapp/App/view/contactUs/tpl/tpl.html
@@ -1,1 +1,45 @@
-123123
+<div class="content">
+    <div class="content-head">
+        <div class="content-head-title">在线留言</div>
+        <span class="content-head-title-eng">ONLINE MESSAGE</span>
+    </div>
+    <div class="content-main">
+        <div class="content-left">
+            <div class="content-message">
+                <div class="content-word">留&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;言：</div>
+                <textarea name="" id="message" cols="30" rows="10"></textarea>
+            </div>
+            <div class="content-name">
+                <div class="content-word">姓&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;名：</div>
+                <div class="input-wrap"><input type="text" id="name"/></div>
+            </div>
+            <div class="content-phone">
+                <div class="content-word">联系方式：</div>
+                <div class="input-wrap"><input type="text" id="phone"/></div>
+            </div>
+            <div class="content-email">
+                <div class="content-word">电子邮箱：</div>
+                <div class="input-wrap"><input type="text"id="email"/></div>
+            </div>
+            <div id="submitBtn">提交</div>
+                <div class="content-tip">
+                        温馨提示:若有任何疑问，您可以通过在线留言，我们将会尽快与你联系，您的私人信息将受到严格保密。
+                </div>
+        </div>
+        <div class="content-right">
+            <div class="content-right-img">
+                <img src="/App/image/view/joinus/message.jpg" alt=""/>
+            </div>       
+            <div class="content-right-word">
+                戴思诺3d雕发戴思诺3d雕发戴思诺3d雕发戴思诺3d雕发戴思诺3d雕发戴思诺3d雕发戴思诺3d雕发戴思诺
+                3d雕发戴思诺3d雕发戴思诺3d雕发戴思诺3d雕发戴思诺3d雕发戴思诺3d雕发戴思诺3d雕发戴思诺3d雕发戴思诺
+                3d雕发戴思诺3d雕发戴思诺3d雕雕戴思诺3d雕发戴思诺3d雕发
+            </div>
+            <div class="content-right-erweicode">
+                <img src="/App/image/global/logo/erweicode.png" alt=""/>
+            </div>
+        </div>
+
+    </div>
+
+</div>
