--- a/src/main/webapp/App/css/view/index/main.css
+++ b/src/main/webapp/App/css/view/index/main.css
@@ -275,8 +275,17 @@ a.cbule5:visited {
   overflow-y: hidden;
   z-index: -1;
 }
+.bgPictureShow .picUl li {
+  overflow: hidden;
+}
 .bgPictureShow .picUl img {
   width: 100%;
+}
+.widthPro {
+  width: 100% !important;
+}
+.heightPro {
+  height: 100%;
 }
 .imgPos {
   position: absolute;
@@ -497,9 +506,9 @@ a.cbule5:visited {
   position: relative;
   overflow: hidden;
 }
-.contentDiv img {
-  width: 100%;
-  height: 180px;
+.movieShow {
+  text-align: center;
+  line-height: 160px;
 }
 .productInfo {
   width: 100%;
