--- a/src/main/webapp/App/css/view/zoujindsn/main.styl
+++ b/src/main/webapp/App/css/view/zoujindsn/main.styl
@@ -18,10 +18,11 @@
 	height 600px
 	.catalog-head
 		margin 10px auto
+		img
+			width 100%
 	.catalog-erweiCode
 		padding-top 15px
 		background-color rgb(5,79,44)
-
 .catalog-items
 	background-color rgb(5,79,44)
 	cursor pointer
