--- a/src/main/webapp/App/view/diaofashishang/tpl/tpl.html
+++ b/src/main/webapp/App/view/diaofashishang/tpl/tpl.html
@@ -1,29 +1,36 @@
-<div class="fc-content-wrap">
-	<div class="fc-content-left">
-		<div class="fc-content-left-wrap">
-			<div class="fc-left-up">
-				<div class="fc-word-mask"></div>
-				<div class="fc-words">戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺</div>
-				<img src="/App/image/view/diaofashishang/diaofafengchao_01.jpg" alt="" width="100%" height="100%"/>
-			</div>
-			<div class="fc-left-dleft">
-				<div class="fc-word-mask"></div>
-				<div class="fc-words">戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺</div>
-				<img src="/App/image/view/diaofashishang/diaofafengchao_03.jpg" alt="" width="100%" height="100%"/>
-			</div>
-			<div class="fc-left-dright">
-				<div class="fc-word-mask"></div>
-				<div class="fc-words">戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺</div>
-				<img src="/App/image/view/diaofashishang/diaofafengchao_04.jpg" alt="" width="100%" height="100%"/>
-			</div>
-		</div>
-	</div>
-	<div class="fc-content-right">
-		<div class="fc-content-right-wrap">
-			<div class="fc-word-mask"></div>
-			<div class="fc-words">戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺</div>
-			<img src="/App/image/view/diaofashishang/diaofafengchao_02.jpg" alt="" width="100%" height="100%"/>
-		</div>
-	</div>
-
+<div class="fc-content-wrap" >
+    <div class="fc-content-arrow-wrap">
+        <div class="fc-content-arrow">
+            <div class="arrow-left"><img src="/App/image/view/diaofashishang/left.png" alt=""/></div>
+            <div class="arrow-right"><img src="/App/image/view/diaofashishang/right.png" alt=""/></div>
+        </div>
+    </div>
+    <div class="fc-content">
+        <div class="fc-content-left">
+            <div class="fc-content-left-wrap">
+                <div class="fc-left-up">
+                    <div class="fc-word-mask"></div>
+                    <div class="fc-words">戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺</div>
+                    <img src="/App/image/view/diaofashishang/diaofafengchao_01.jpg" alt="" width="100%" height="100%"/>
+                </div>
+                <div class="fc-left-dleft">
+                    <div class="fc-word-mask"></div>
+                    <div class="fc-words">戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺</div>
+                    <img src="/App/image/view/diaofashishang/diaofafengchao_03.jpg" alt="" width="100%" height="100%"/>
+                </div>
+                <div class="fc-left-dright">
+                    <div class="fc-word-mask"></div>
+                    <div class="fc-words">戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺</div>
+                    <img src="/App/image/view/diaofashishang/diaofafengchao_04.jpg" alt="" width="100%" height="100%"/>
+                </div>
+            </div>
+        </div>
+        <div class="fc-content-right">
+            <div class="fc-content-right-wrap">
+                <div class="fc-word-mask"></div>
+                <div class="fc-words">戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺</div>
+                <img src="/App/image/view/diaofashishang/diaofafengchao_02.jpg" alt="" width="100%" height="100%"/>
+            </div>
+        </div>
+    </div>
 </div>
