--- a/src/main/webapp/App/css/view/diaofashishang/main.styl
+++ b/src/main/webapp/App/css/view/diaofashishang/main.styl
@@ -2,6 +2,7 @@
 	height 100%
 	width 100%
 	background-color #303030
+	position relative
 .content-wrap
 	margin 0 auto
 	.content-img-wrap
@@ -26,6 +27,7 @@
 	height 660px
 	width 1080px
 	margin 0 auto
+	position relative
 	.fc-content-left
 		float left
 		width 65%
@@ -76,3 +78,22 @@
 	height 50px
 	overflow hidden
 	color #eee
+.fc-content-arrow-wrap
+	position absolute
+	top 0
+	left 0
+	width 100%
+.fc-content-arrow
+	position relative
+	.arrow-left
+		position absolute
+		left -64px
+		top 250px
+		cursor pointer
+	.arrow-right
+		position absolute
+		right -64px
+		top 250px
+		cursor pointer
+.active
+	display block!important
