--- a/src/main/webapp/App/view/zoujindsn/tpl/tpl.html
+++ b/src/main/webapp/App/view/zoujindsn/tpl/tpl.html
@@ -15,12 +15,16 @@
 						品牌简介
 					</div>
 				</div>
-				<div class="catalog-item " id="pinpaiyingpian">
-					<div class="catalog-item-in">
-						品牌影片
-					</div>
-				</div>
-
+                <div class="catalog-item " id="peixunzhongxin">
+                    <div class="catalog-item-in">
+                        培训中心
+                    </div>
+                </div>
+                <div class="catalog-item " id="pinpaiyingpian">
+                    <div class="catalog-item-in">
+                        品牌影片
+                    </div>
+                </div>
 				<div class="catalog-item " id="lianxiwomen">
 					<div class="catalog-item-in">
 						联系我们
@@ -38,10 +42,10 @@
 
 	</div>
 	<div class="content-right">
-		<div id="pinpaijianjie-main" class="content-article" style="display: block">
+		<div id="peixunzhongxin-main" class="content-article" style="display: block">
 			<div class="content-main-head">
-				<div class="content-head-title">品牌简介</div>
-				<span class="content-head-title-eng">BRAND INTRODUCTION</span>
+				<div class="content-head-title">培训中心</div>
+				<span class="content-head-title-eng">TRAINING CENTER</span>
 
 			</div>
 			<div class="content-main-wrap">
@@ -49,24 +53,39 @@
 					<img src="/App/image/view/joinus/pinpaigushi_01.jpg" alt="" width="100%" height="100%"/>
 				</div>
 				<div class="brand-introduction-words">
-					很不错哦~
-					很不错哦~
-					很不错哦~
-					很不错哦~
-					很不错哦~
-					很不错哦~
-					很不错哦~
-					很不错哦~
-					很不错哦~
-					很不错哦~
-					很不错哦~
-					很不错哦~
-					很不错哦~
-					很不错哦~
-					很不错哦~
+                    这里是培训中心，欢迎了解相关知识.
 				</div>
 			</div>
 		</div>
+        <div id="pinpaijianjie-main" class="content-article" style="display: block">
+            <div class="content-main-head">
+                <div class="content-head-title">品牌简介</div>
+                <span class="content-head-title-eng">BRAND INTRODUCTION</span>
+
+            </div>
+            <div class="content-main-wrap">
+                <div class="brand-introduction-img">
+                    <img src="/App/image/view/joinus/pinpaigushi_01.jpg" alt="" width="100%" height="100%"/>
+                </div>
+                <div class="brand-introduction-words">
+                    很不错哦~
+                    很不错哦~
+                    很不错哦~
+                    很不错哦~
+                    很不错哦~
+                    很不错哦~
+                    很不错哦~
+                    很不错哦~
+                    很不错哦~
+                    很不错哦~
+                    很不错哦~
+                    很不错哦~
+                    很不错哦~
+                    很不错哦~
+                    很不错哦~
+                </div>
+            </div>
+        </div>
 		<div id="pinpaiyingpian-main" class="content-article">
 			<div class="content-main-head">
 				<div class="content-head-title">品牌影片</div>
