--- a/src/main/webapp/App/css/view/diaofashishang/main.styl
+++ b/src/main/webapp/App/css/view/diaofashishang/main.styl
@@ -23,6 +23,8 @@
 		width 100%
 		background-color #000
 		opacity 0.5
+.fc-content
+	display none
 .fc-content-wrap
 	height 660px
 	width 1080px
@@ -69,7 +71,7 @@
 	opacity .5
 .fc-words
 	position absolute
-	bottom  0
+	bottom	0
 	left 0
 	text-align left
 	padding 0 30px
@@ -97,3 +99,101 @@
 		cursor pointer
 .active
 	display block!important
+.content
+	height 100%
+	width 1080px
+	margin 0 auto
+.content-img
+	position relative
+	img
+		height 400px
+		width 1080px
+.content-main-nav
+	height 50px
+	position absolute
+	bottom 0
+	left 240px
+	.content-main-nav-mask-item
+		width 160px
+		height 50px
+		float left
+		background-color #094424
+		color #EEEEEE
+		font-size 16px
+		line-height 50px
+		cursor pointer
+	.fc-content-main-nav-wrap
+		position absolute
+		top 0
+		left 0
+		margin 0 auto
+		width 640px
+		.content-main-nav-item
+			width 160px
+			float left
+			color #EEEEEE
+			font-size 16px
+			line-height 50px
+			border-right 1px dashed #eee
+			cursor pointer
+.content-main-article
+	display none
+	padding 40px
+.content-head-title
+	font-size 28px
+	border-bottom 5px solid #898000
+	width 120px
+	color #eee
+	float left
+.content-head-title-eng
+	font-size 16px
+	display block
+	text-align left
+	line-height 52px
+	color #bbb
+.content-main-head
+	height 45px
+	border-bottom 1px solid #ddd
+
+.article-introduction
+	height 300px
+	color #bbb
+.news-wrap
+	position absolute
+	top 0
+	left 0
+	height 500px
+	width 500px
+	margin 0 auto
+.news-main
+	position fixed
+	z-index 9999
+	left 20%
+	top 30px
+	width 800px
+	background #fff
+	max-height 650px
+	overflow-y scroll
+	display block
+.news-wrap-mask
+	position fixed
+	width 100%
+	height 100%
+	z-index 9998
+	left 0
+	right 0
+	top 0
+	bottom 0
+	opacity 0.3
+	background #000
+.close-btn
+	position fixed
+	z-index 9999
+	left 20%
+	top 0
+	height 30px
+	width 30px
+	color #fff
+	background rgb(139,126,1)
+	font-size 20px
+	cursor pointer
