--- a/src/main/webapp/App/view/diaofashishang/tpl/shishangqianyanmain.html
+++ b/src/main/webapp/App/view/diaofashishang/tpl/shishangqianyanmain.html
@@ -1,18 +1,18 @@
 <div class="content-wrap">
 	<div class="content-img-wrap">
-		<div class="content-img-item">
+		<div class="content-img-item" id="meifamiji">
 			<div class="content-img-item-mask"></div>
 			<img src="/App/image/view/diaofashishang/meifamiji.png" alt="" width="100%" height="100%"/>
 		</div>
-		<div class="content-img-item">
+		<div class="content-img-item" id="shishangyizhuang">
 			<div class="content-img-item-mask"></div>
 			<img src="/App/image/view/diaofashishang/shishangyizhuang.png" alt="" width="100%" height="100%"/>
 		</div>
-		<div class="content-img-item">
+		<div class="content-img-item" id="zhiganzhuangrong">
 			<div class="content-img-item-mask"></div>
 			<img src="/App/image/view/diaofashishang/zhiganzhuangrong.png" alt="" width="100%" height="100%"/>
 		</div>
-		<div class="content-img-item">
+		<div class="content-img-item" id="lirengushi">
 			<div class="content-img-item-mask"></div>
 			<img src="/App/image/view/diaofashishang/lirengushi.png" alt="" width="100%" height="100%"/>
 		</div>
