--- a/src/main/webapp/WEB-INF/html/view/login.html
+++ b/src/main/webapp/WEB-INF/html/view/login.html
@@ -6,7 +6,7 @@
 	<meta name="view" content="view/login/main"/>
 	<link rel="stylesheet" href="../../App/assets/lib/bootstrap/css/bootstrap.css"/>
 	<link rel="stylesheet" href="../../App/assets/lib/font-awesome/css/font-awesome.css">
-	<link rel="stylesheet" href="../../App/assets/css/main.css"/>
+	<link rel="stylesheet" href="../../App/assets/css/view/login/main.css"/>
 	<link rel="stylesheet" href="../../App/assets/lib/magic/magic.css"/>
 </head>
 <body class="login">
@@ -20,8 +20,8 @@
 				<p class="text-muted text-center">
 					Enter your username and password
 				</p>
-				<input type="text" placeholder="Username" class="form-control">
-				<input type="password" placeholder="Password" class="form-control">
+				<input type="text" name="username" placeholder="Username" class="form-control">
+				<input type="password" name="password" placeholder="Password" class="form-control">
 				<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 			</form>
 		</div>
@@ -42,18 +42,18 @@
 			</form>
 		</div>
 	</div>
-	<div class="text-center">
-		<ul class="list-inline">
-			<li><a class="text-muted" href="#login" data-toggle="tab">Login</a></li>
-			<li><a class="text-muted" href="#forgot" data-toggle="tab">Forgot Password</a></li>
-			<li><a class="text-muted" href="#signup" data-toggle="tab">Signup</a></li>
-		</ul>
-	</div>
+	<!--<div class="text-center">-->
+		<!--<ul class="list-inline">-->
+			<!--<li><a class="text-muted" href="#login" data-toggle="tab">Login</a></li>-->
+			<!--<li><a class="text-muted" href="#forgot" data-toggle="tab">Forgot Password</a></li>-->
+			<!--<li><a class="text-muted" href="#signup" data-toggle="tab">Signup</a></li>-->
+		<!--</ul>-->
+	<!--</div>-->
 </div>
 <!-- /container -->
-<script src="../../App/lib/basic.js"></script>
-<script src="../../App/config.js">
-	require([$('meta[name=view]').attr('content')]);
-</script>
+<!--<script src="../../App/lib/basic.js"></script>-->
+<!--<script src="../../App/config.js">-->
+	<!--require([$('meta[name=view]').attr('content')]);-->
+<!--</script>-->
 </body>
 </html>
