--- a/src/main/webapp/App/view/diaofashishang/tpl/diaofafengchaomain.html
+++ b/src/main/webapp/App/view/diaofashishang/tpl/diaofafengchaomain.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="fc-left-dright">
                     <div class="fc-word-mask"></div>
-                    <div class="fc-words">1戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺</div>
+                    <div class="fc-words">1戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝s诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺戴丝诺</div>
                     <img src="/App/image/view/diaofashishang/diaofafengchao_04.jpg" alt="" width="100%" height="100%"/>
                 </div>
             </div>
